--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
  * Version: 1.0
  *
  * This theme, like WordPress, is licensed under the GPL.
- * Use it to make something cool, have fun, and share what you've learned with others.
+ * Use it to make something cool, have fun, and share what
+ * you've learned with others.
  *
  * ## Color Palette
  *   https://coolors.co/eccfac-d49145-bc3451-741a2e-1b0d0f
