--- a/templates/page.html
+++ b/templates/page.html
@@ -1,15 +1,21 @@
-<!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
-<!-- wp:group {"tagName":"main","layout":{"inherit":true}} -->
-<main class="wp-block-group">
-	<!-- wp:post-featured-image /-->
-	<!-- wp:post-title /-->
-	<!-- wp:spacer {"height":40} -->
-	<div style="height:40px" aria-hidden="true" class="wp-block-spacer"></div>
-	<!-- /wp:spacer -->
-	<!-- wp:post-content {"align":"full","layout":{"inherit":true}} /-->
-</main>
+<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","verticalAlignment":"top"},"style":{"spacing":{"blockGap":"0"}},"className":"site-container"} -->
+<div class="wp-block-group site-container">
+	<!-- wp:group {"style":{"layout":{"selfStretch":"fixed","flexSize":"400px"},"position":{"type":"sticky","top":"0px"}},"layout":{"type":"constrained"}} -->
+	<div class="wp-block-group">
+		<!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
+	</div>
+	<!-- /wp:group -->
+
+	<!-- wp:group {"tagName":"main","style":{"layout":{"selfStretch":"fill","flexSize":null},"spacing":{"blockGap":"var:preset|spacing|50"}},"layout":{"inherit":true,"type":"constrained","justifyContent":"center"}} -->
+	<main class="wp-block-group">
+		<!-- wp:post-featured-image /-->
+
+		<!-- wp:post-title /-->
+
+		<!-- wp:post-content {"align":"full","layout":{"inherit":true}} /-->
+	</main>
+	<!-- /wp:group -->
+</div>
 <!-- /wp:group -->
-<!-- wp:spacer {"height":80} -->
-<div style="height:80px" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer --></div>
+
 <!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
