--- a/templates/single.html
+++ b/templates/single.html
@@ -1,70 +1,75 @@
-<!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
-<!-- wp:group {"tagName":"main","layout":{"inherit":true}} -->
-<main class="wp-block-group">
-	<!-- wp:spacer {"height":40} -->
-	<div style="height:40px" aria-hidden="true" class="wp-block-spacer"></div>
-	<!-- /wp:spacer -->
-	<!-- wp:post-title /-->
-	<!-- wp:post-date /-->
-	<!-- wp:separator -->
-	<hr class="wp-block-separator"/>
-	<!-- /wp:separator -->
-	<!-- wp:post-content {"align":"full","layout":{"inherit":true}} /-->
-	<!-- wp:spacer {"height":40} -->
-	<div style="height:40px" aria-hidden="true" class="wp-block-spacer"></div>
-	<!-- /wp:spacer -->
-	<!-- wp:group {"layout":{"type":"flex","allowOrientation":false,"justifyContent":"flex-start"}} -->
+<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","verticalAlignment":"top"},"style":{"spacing":{"blockGap":"0"}},"className":"site-container"} -->
+<div class="wp-block-group site-container">
+	<!-- wp:group {"style":{"layout":{"selfStretch":"fixed","flexSize":"400px"},"position":{"type":"sticky","top":"0px"}},"layout":{"type":"constrained"}} -->
 	<div class="wp-block-group">
-		<!-- wp:paragraph -->
-		<p>Posted in:</p>
-		<!-- /wp:paragraph -->
-		<!-- wp:post-terms {"term":"category"} /-->
+		<!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
 	</div>
 	<!-- /wp:group -->
-	<!-- wp:spacer {"height":40} -->
-	<div style="height:40px" aria-hidden="true" class="wp-block-spacer"></div>
-	<!-- /wp:spacer -->
 
-	<!-- wp:group {"className":"post-navigation","style":{"border":{"width":"0 2px","style":"solid"},"spacing":{"padding":{"top":"2rem","right":"2rem","bottom":"2rem","left":"2rem"}}},"borderColor":"gold","backgroundColor":"light-gold"} -->
-	<div class="wp-block-group has-border-color has-gold-border-color has-light-gold-background-color has-background post-navigation" style="border-style:solid;border-width:0 2px;padding-top:2rem;padding-right:2rem;padding-bottom:2rem;padding-left:2rem">
-		<!-- wp:post-navigation-link {"type":"previous","showTitle":true,"label":"Previous: "} /-->
-		<!-- wp:post-navigation-link {"showTitle":true,"label":"Next: "} /-->
-	</div>
+	<!-- wp:group {"tagName":"main","style":{"layout":{"selfStretch":"fill","flexSize":null}},"layout":{"inherit":true,"type":"constrained","justifyContent":"center"}} -->
+	<main class="wp-block-group">
+		<!-- wp:post-title {"level":1} /-->
+
+		<!-- wp:post-date /-->
+
+		<!-- wp:separator -->
+		<hr class="wp-block-separator"/>
+		<!-- /wp:separator -->
+
+		<!-- wp:post-content {"align":"full","layout":{"inherit":true}} /-->
+
+		<!-- wp:group {"layout":{"type":"flex","allowOrientation":false,"justifyContent":"flex-start"},"style":{"spacing":{"blockGap":"8px"}}} -->
+		<div class="wp-block-group">
+			<!-- wp:paragraph -->
+			<p>Posted in:</p>
+			<!-- /wp:paragraph -->
+			<!-- wp:post-terms {"term":"category"} /-->
+		</div>
+		<!-- /wp:group -->
+
+		<!-- wp:separator -->
+		<hr class="wp-block-separator"/>
+		<!-- /wp:separator -->
+
+		<!-- wp:jetpack/like {"showAvatars":false} /-->
+
+		<!-- wp:group {"className":"post-navigation","style":{"border":{"width":"0 2px","style":"solid"},"spacing":{"padding":{"top":"2rem","right":"2rem","bottom":"2rem","left":"2rem"}}},"borderColor":"gold","backgroundColor":"light-gold"} -->
+		<div class="wp-block-group has-border-color has-gold-border-color has-light-gold-background-color has-background post-navigation" style="border-style:solid;border-width:0 2px;padding-top:2rem;padding-right:2rem;padding-bottom:2rem;padding-left:2rem">
+			<!-- wp:post-navigation-link {"type":"previous","showTitle":true,"label":"Previous: "} /-->
+			<!-- wp:post-navigation-link {"showTitle":true,"label":"Next: "} /-->
+		</div>
+		<!-- /wp:group -->
+	
+		<!-- wp:spacer {"height":"6rem"} -->
+		<div style="height:6rem" aria-hidden="true" class="wp-block-spacer"></div>
+		<!-- /wp:spacer -->
+
+		<!-- wp:heading {"className:"comments-title"} -->
+		<h2 class="comments-title">Comments</h2>
+		<!-- /wp:heading -->
+
+		<!-- wp:comments-query-loop {"perPage":20} -->
+		<div class="wp-block-comments-query-loop">
+			<!-- wp:comment-template -->
+			<!-- wp:group {"className":"comment-content"} -->
+			<div class="wp-block-group comment-content">
+				<!-- wp:comment-author-name {"isLink":true,"linkTarget":"_blank"} /-->
+
+				<!-- wp:comment-date /-->
+
+				<!-- wp:comment-content /-->
+
+				<!-- wp:spacer {"height":40} -->
+				<div style="height:40px" aria-hidden="true" class="wp-block-spacer"></div>
+				<!-- /wp:spacer -->
+			</div>
+			<!-- /wp:group -->
+			<!-- /wp:comment-template -->
+		</div>
+		<!-- /wp:comments-query-loop -->
+	</main>
 	<!-- /wp:group -->
-	<!-- wp:spacer {"height":100} -->
-	<div style="height:100px" aria-hidden="true" class="wp-block-spacer"></div>
-	<!-- /wp:spacer -->
-	<!-- wp:heading {"className:"comments-title"} -->
-	<h2 class="comments-title">Comments</h2>
-	<!-- /wp:heading -->
-
-	<!-- wp:comments-query-loop {"perPage":20} -->
-	<div class="wp-block-comments-query-loop"><!-- wp:comment-template -->
-	<!-- wp:group {"className":"comment-avatar"} -->
-	<div class="wp-block-group comment-avatar"><!-- wp:comment-author-avatar {"width":100,"height":100} /--></div>
-	<!-- /wp:group -->
-
-	<!-- wp:group {"className":"comment-content"} -->
-	<div class="wp-block-group comment-content"><!-- wp:comment-author-name {"isLink":true,"linkTarget":"_blank"} /-->
-
-	<!-- wp:comment-date /-->
-
-	<!-- wp:comment-content /-->
-
-	<!-- wp:group {"layout":{"type":"flex","allowOrientation":false,"justifyContent":"flex-start"}} -->
-	<div class="wp-block-group"><!-- wp:comment-reply-link /-->
-
-	<!-- wp:comment-edit-link /--></div>
-	<!-- /wp:group -->
-	<!-- wp:spacer {"height":40} -->
-	<div style="height:40px" aria-hidden="true" class="wp-block-spacer"></div>
-	<!-- /wp:spacer --></div>
-	<!-- /wp:group -->
-	<!-- /wp:comment-template --></div>
-	<!-- /wp:comments-query-loop -->
-</main>
+</div>
 <!-- /wp:group -->
-<!-- wp:spacer {"height":80} -->
-<div style="height:80px" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer --></div>
+
 <!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
