--- a/src/style.css
+++ b/src/style.css
@@ -104,7 +104,7 @@ a:focus,
 
 a:focus {
 	text-decoration: none;
-	outline: 1.5px solid currentColor;
+	outline: 1.5px solid currentcolor;
 	outline-offset: 2px;
 }
 
