--- a/src/blocks.css
+++ b/src/blocks.css
@@ -105,3 +105,19 @@
 		display: none;
 	}
 }
+
+.postid-58590 .wp-block-gallery.has-nested-images figure.wp-block-image:not(#individual-image) {
+	width: 100%;
+
+	@media (min-width: 600px) {
+    width: calc(50% - var(--wp--style--unstable-gallery-gap, 16px)/2);
+  }
+
+	@media (min-width: 1200px) {
+    width: calc(33.33% - var(--wp--style--unstable-gallery-gap, 16px)*.66667);
+  }
+}
+
+.postid-58590 .lightbox-image-container img {
+    object-fit: contain !important;
+}
